--- a/index (2).html
+++ b/index (2).html
@@ -13,7 +13,7 @@
     <h2 id="vermelho">Titulo 2 </h2>
     <h2>Subtitulo</h2>
     <h3>Sub sub Titulo</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus quidem odio itaque! Qui quo ullam, fugit odio iusto laboriosam voluptate! Vel sed saepe, enim quae veritatis numquam repellendus eos harum?</p>
+    <p>Você nasceu para brilhar.</p>
     <ul>
         <li>Item 1</li>
         <li>item 2</li>
